cmake_minimum_required(VERSION 3.23)
project(DataTransmissionInSystemsWithFeedback)

set(CMAKE_CXX_STANDARD 23)

add_executable(DataTransmissionInSystemsWithFeedback main.cpp dop2.1.cpp dop2.2.cpp dop2.3.cpp dop2.4.cpp dop2.5.cpp dop2.1.hpp dop2.2.hpp dop2.3.hpp dop2.4.hpp dop2.5.hpp osnova4.cpp osnova4.hpp)
